--- a/rpt/LabelForSamples.jrxml
+++ b/rpt/LabelForSamples.jrxml
@@ -1,35 +1,19 @@
-<?xml version="1.0" encoding="UTF-8"  ?>
-<!-- Created with iReport - A designer for JasperReports -->
-<!DOCTYPE jasperReport PUBLIC "//JasperReports//DTD Report Design//EN" "http://jasperreports.sourceforge.net/dtds/jasperreport.dtd">
-<jasperReport
-		 name="LabelForSamples"
-		 columnCount="1"
-		 printOrder="Vertical"
-		 orientation="Landscape"
-		 pageWidth="141"
-		 pageHeight="56"
-		 columnWidth="141"
-		 columnSpacing="0"
-		 leftMargin="0"
-		 rightMargin="0"
-		 topMargin="0"
-		 bottomMargin="0"
-		 whenNoDataType="AllSectionsNoDetail"
-		 isTitleNewPage="false"
-		 isSummaryNewPage="false">
-	<property name="ireport.scriptlethandling" value="0" />
-	<property name="ireport.encoding" value="UTF-8" />
-	<import value="java.util.*" />
-	<import value="net.sf.jasperreports.engine.*" />
-	<import value="net.sf.jasperreports.engine.data.*" />
-	<import value="net.sf.jasperreports.engine.util.JRImageLoader" />
-	<import value="org.joda.time.*" />
-
-	<parameter name="patientID" isForPrompting="true" class="java.lang.String"/>
-	<queryString><![CDATA[SELECT * 
+<?xml version="1.0" encoding="UTF-8"?>
+<!-- Created with Jaspersoft Studio version 6.15.0.final using JasperReports Library version 6.15.0-dd49bfb94918336b8321d5507193f0169ead4e95  -->
+<jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="LabelForSamples" pageWidth="141" pageHeight="56" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="141" leftMargin="0" rightMargin="0" topMargin="0" bottomMargin="0" resourceBundle="LabelForSamples" whenResourceMissingType="Key" uuid="7e294126-6fb6-411a-b50d-08ace3197902">
+	<property name="ireport.scriptlethandling" value="0"/>
+	<property name="ireport.encoding" value="UTF-8"/>
+	<import value="net.sf.jasperreports.engine.*"/>
+	<import value="net.sf.jasperreports.engine.util.JRImageLoader"/>
+	<import value="java.util.*"/>
+	<import value="org.joda.time.*"/>
+	<import value="net.sf.jasperreports.engine.data.*"/>
+	<parameter name="patientID" class="java.lang.String"/>
+	<queryString>
+		<![CDATA[SELECT * 
 FROM PATIENT
-WHERE PAT_ID Like $P{patientID}]]></queryString>
-
+WHERE PAT_ID Like $P{patientID}]]>
+	</queryString>
 	<field name="PAT_ID" class="java.lang.Integer"/>
 	<field name="PAT_FNAME" class="java.lang.String"/>
 	<field name="PAT_SNAME" class="java.lang.String"/>
@@ -56,221 +40,158 @@ WHERE PAT_ID Like $P{patientID}]]></queryString>
 	<field name="PAT_PHOTO" class="java.lang.Object"/>
 	<field name="PAT_TAXCODE" class="java.lang.String"/>
 	<field name="PAT_TIMESTAMP" class="java.sql.Timestamp"/>
-
-	<variable name="now" class="java.util.Date" resetType="Report" calculation="Nothing">
+	<variable name="now" class="java.util.Date">
 		<variableExpression><![CDATA[new Date()]]></variableExpression>
 	</variable>
-		<background>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</background>
-		<title>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</title>
-		<pageHeader>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</pageHeader>
-		<columnHeader>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</columnHeader>
-		<detail>
-			<band height="56"  isSplitAllowed="true" >
-				<textField isStretchWithOverflow="false" isBlankWhenNull="false" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
-					<reportElement
-						x="50"
-						y="5"
-						width="39"
-						height="10"
-						key="textField-2"/>
-					<box>					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+	<background>
+		<band splitType="Stretch"/>
+	</background>
+	<title>
+		<band splitType="Stretch"/>
+	</title>
+	<pageHeader>
+		<band splitType="Stretch"/>
+	</pageHeader>
+	<columnHeader>
+		<band splitType="Stretch"/>
+	</columnHeader>
+	<detail>
+		<band height="56" splitType="Stretch">
+			<textField isBlankWhenNull="false">
+				<reportElement key="textField-2" x="50" y="5" width="39" height="10" uuid="92c0bd73-0287-4431-b0d8-0961b4004c07"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-</box>
-					<textElement verticalAlignment="Middle">
-						<font size="7" isBold="true"/>
-					</textElement>
-				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{PAT_ID}]]></textFieldExpression>
-				</textField>
-				<staticText>
-					<reportElement
-						mode="Transparent"
-						x="5"
-						y="5"
-						width="45"
-						height="10"
-						key="staticText-5"/>
-					<box>					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement verticalAlignment="Middle">
+					<font size="7" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{PAT_ID}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement key="staticText-5" mode="Transparent" x="5" y="5" width="45" height="10" uuid="c8b7363b-9f03-475d-a56c-1e33cb8bb379"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-</box>
-					<textElement textAlignment="Left" verticalAlignment="Middle">
-						<font size="7" isBold="true"/>
-					</textElement>
-				<text><![CDATA[Patient ID:]]></text>
-				</staticText>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
-					<reportElement
-						x="24"
-						y="17"
-						width="23"
-						height="9"
-						key="textField-3"/>
-					<box>					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement textAlignment="Left" verticalAlignment="Middle">
+					<font size="7" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$R{PatientId}]]></textFieldExpression>
+			</textField>
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement key="textField-3" x="24" y="17" width="23" height="9" uuid="2b0abb40-99ae-4ea3-8b50-6c8f8eef923f"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-</box>
-					<textElement>
-						<font size="7"/>
-					</textElement>
-				<textFieldExpression   class="java.lang.String"><![CDATA[$F{PAT_SEX}]]></textFieldExpression>
-				</textField>
-				<staticText>
-					<reportElement
-						x="5"
-						y="17"
-						width="20"
-						height="9"
-						key="staticText-7"/>
-					<box>					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement>
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{PAT_SEX}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement key="staticText-7" x="5" y="17" width="20" height="9" uuid="08b137c5-abc4-4b6c-8242-f5340f1f7a84"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-</box>
-					<textElement>
-						<font size="7" isBold="true"/>
-					</textElement>
-				<text><![CDATA[Sex:]]></text>
-				</staticText>
-				<staticText>
-					<reportElement
-						x="47"
-						y="17"
-						width="20"
-						height="9"
-						key="staticText-14"/>
-					<box>					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement>
+					<font size="7" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$R{Sex}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement key="staticText-14" x="47" y="17" width="20" height="9" uuid="a17258dc-4bf6-47d8-9de3-8ffcdd7fd8df"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-</box>
-					<textElement>
-						<font size="7" isBold="true"/>
-					</textElement>
-				<text><![CDATA[Age:]]></text>
-				</staticText>
-				<staticText>
-					<reportElement
-						x="5"
-						y="28"
-						width="44"
-						height="9"
-						key="staticText-15"/>
-					<box>					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement>
+					<font size="7" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$R{Age}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement key="staticText-15" x="5" y="28" width="44" height="9" uuid="7cc910b9-64cc-468d-a765-8108797afe6a"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-</box>
-					<textElement>
-						<font size="7" isBold="true"/>
-					</textElement>
-				<text><![CDATA[Exam type:]]></text>
-				</staticText>
-				<line direction="TopDown">
-					<reportElement
-						x="50"
-						y="36"
-						width="82"
-						height="0"
-						key="line-3"/>
-					<graphicElement stretchType="NoStretch"/>
-				</line>
-				<staticText>
-					<reportElement
-						x="5"
-						y="41"
-						width="25"
-						height="9"
-						key="staticText-16"/>
-					<box>					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement>
+					<font size="7" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$R{ExamType}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement key="line-3" x="50" y="36" width="82" height="1" uuid="08b81be9-fa59-4b41-b330-a0bb7797bcf3"/>
+			</line>
+			<textField>
+				<reportElement key="staticText-16" x="5" y="41" width="25" height="9" uuid="c1d04487-54b6-4482-b246-f16a98bd0874"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-</box>
-					<textElement>
-						<font size="7" isBold="true"/>
-					</textElement>
-				<text><![CDATA[Date:]]></text>
-				</staticText>
-				<staticText>
-					<reportElement
-						x="76"
-						y="41"
-						width="25"
-						height="9"
-						key="staticText-17"/>
-					<box>					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement>
+					<font size="7" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$R{Date}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement key="staticText-17" x="76" y="41" width="25" height="9" uuid="a0dea825-6fb3-4c5b-8d68-b9b9bd5fa1d2"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-</box>
-					<textElement>
-						<font size="7" isBold="true"/>
-					</textElement>
-				<text><![CDATA[Time:]]></text>
-				</staticText>
-				<line direction="TopDown">
-					<reportElement
-						x="32"
-						y="48"
-						width="44"
-						height="1"
-						key="line-4"/>
-					<graphicElement stretchType="NoStretch"/>
-				</line>
-				<line direction="TopDown">
-					<reportElement
-						x="104"
-						y="48"
-						width="26"
-						height="1"
-						key="line-5"/>
-					<graphicElement stretchType="NoStretch"/>
-				</line>
-				<textField isStretchWithOverflow="true" isBlankWhenNull="true" evaluationTime="Now" hyperlinkType="None"  hyperlinkTarget="Self" >
-					<reportElement
-						x="66"
-						y="17"
-						width="23"
-						height="9"
-						key="textField-4"/>
-					<box>					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
+				</box>
+				<textElement>
+					<font size="7" isBold="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$R{Time}]]></textFieldExpression>
+			</textField>
+			<line>
+				<reportElement key="line-4" x="32" y="48" width="44" height="1" uuid="e6d30bbc-f4a0-496b-9682-f2dca5ac2d80"/>
+			</line>
+			<line>
+				<reportElement key="line-5" x="104" y="48" width="26" height="1" uuid="9786d52d-8613-4a34-a712-4bfe6c2d3b44"/>
+			</line>
+			<textField textAdjust="StretchHeight" isBlankWhenNull="true">
+				<reportElement key="textField-4" x="66" y="17" width="23" height="9" uuid="a0269c1e-cb94-44d6-a3c0-b83d8863c444"/>
+				<box>
+					<topPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<leftPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
 					<bottomPen lineWidth="0.0" lineColor="#000000"/>
 					<rightPen lineWidth="0.0" lineStyle="Solid" lineColor="#000000"/>
-</box>
-					<textElement>
-						<font size="7"/>
-					</textElement>
-				<textFieldExpression   class="java.lang.Integer"><![CDATA[$F{PAT_AGE}]]></textFieldExpression>
-				</textField>
-			</band>
-		</detail>
-		<columnFooter>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</columnFooter>
-		<pageFooter>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</pageFooter>
-		<summary>
-			<band height="0"  isSplitAllowed="true" >
-			</band>
-		</summary>
+				</box>
+				<textElement>
+					<font size="7"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{PAT_AGE}]]></textFieldExpression>
+			</textField>
+		</band>
+	</detail>
+	<columnFooter>
+		<band splitType="Stretch"/>
+	</columnFooter>
+	<pageFooter>
+		<band splitType="Stretch"/>
+	</pageFooter>
+	<summary>
+		<band splitType="Stretch"/>
+	</summary>
 </jasperReport>
